# Spreca

./: CMakeLists.txt  README.md  SymbolicCachePass.cpp  explicit-vs-symbolic-SEED.sh  install-deps.sh  test_8k_10.sh
Analysis/: CacheModel.h  SchedulingConstraints.cpp  SchedulingConstraints.h
ExpCache/: ExpCache.cpp  ExpCache.cpp~  ExpCache.h
SymCache/: SymCache.cpp  SymCache.cpp~  SymCache.h
SymTraceGen/: CMakeLists.txt  SymTraceGen.cpp  SymTraceGen.cpp~
Test/: #TraceGenSingle.sh#  README_TEST.txt  TRACE_test.c  Test.sh  TraceGen.sh  TraceGen.sh~  TraceGenSingle.sh  TraceGenSingle.sh~  aes_simple2.c~  aes_simple3.c~  aes_simple5.c~  alias1_processed.log~  alias2.c~  compile.sh  compile.sh~  inordersimulate.py  preprocess.py  symbolic.c~  test-motiv.log~  test.c  test.py~  test1.c  test1_padding.c~  test2.c  test_notes.xopp~
Test/InOrderStates/: preprocess_fully.py  setassocgen.py  test_processed_12_3_inorderstates.txt
Test/NonSymbolicTests/: addr.c  aes_simple.c  aes_simple3.c  aes_simple5.c  aes_simple6.c  age.c  control1.c  control10.c  control11.c  control12.c  control13.c  control14.c  control15.c  control2-1.c  control2-2.c  control2.c  control3.c  control4.c  control5.c  control6.c  control7.c  control8.c  control9.c  data1.c  data2.c  data3.c  data4.c  data5.c  data6.c  motiv.c  motiv1.c  motiv_sat.c  test0.c  test1.c  test1_allloads.c  test1_localvar.c  test1_padding_sat.c  test1_padding_unsat.c  test2.c  test3.c  (+4 more)
Test/Results/: test_processed_12_3_10_result.txt  test_processed_explicit_12_3_10_result.txt
Test/Traces/: #alias2_processed.log#  aes_simple1_processed.log16_4_inorderstates.txt  aes_simple1_processed.logresult.txt  aes_simple2_processed.log36_9_inorderstates.txt  aes_simple2_processed.log40_10_inorderstates.txt  aes_simple2_processed.logresult.txt  aes_simple3_processed.log40_10_inorderstates.txt  aes_simple3_processed.logresult.txt  aes_simple4_processed.log36_9_inorderstates.txt  aes_simple4_processed.logresult.txt  aes_simple5_processed.log36_9_inorderstates.txt  aes_simple5_processed.log40_10_inorderstates.txt  aes_simple5_processed.logresult.txt  aes_simple_processed.log16_4_inorderstates.txt  aes_simple_processed.logresult.txt  alias1_processed.log12_3_inorderstates.txt  alias1_processed.log16_4_inorderstates.txt  alias1_processed.logresult.txt  alias_processed.log12_3_inorderstates.txt  (+9 more)
crypto_test/: TRACE_test.c  TRACE_test.h  TestStats.sh  TraceCount.sh  TraceCountAll.sh  TraceGenSingle.sh  TraceGenSingleAll.sh  compile.sh  countlines.py  countlines.sh  countlines.sh~  inorderaddrage.py  leakingsites.py  leakingsites.sh  preprocess.py  preprocess.sh  preprocess_fully.py  preprocess_fully.sh
(+80 files in other folders)
